--- a/src/less/core/visibility.less
+++ b/src/less/core/visibility.less
@@ -94,12 +94,10 @@
  ========================================================================== */
 
 /* Hidden */
-.uk-visible-toggle:not(:hover) .uk-hidden-hover,
-.uk-visible-toggle:not(.uk-hover) .uk-hidden-hover { display: none !important; }
+.uk-visible-toggle:not(:hover):not(.uk-hover) .uk-hidden-hover { display: none !important; }
 
 /* Invisible */
-.uk-visible-toggle:not(:hover) .uk-invisible-hover,
-.uk-visible-toggle:not(.uk-hover) .uk-invisible-hover { visibility: hidden !important; }
+.uk-visible-toggle:not(:hover):not(.uk-hover) .uk-invisible-hover { visibility: hidden !important; }
 
 
 
